# Pascal_Compiler

./: CMakeLists.txt  README.md  a.out  ast.cpp  ast.h  global.h  grammar.txt  lex.yy.c  main.cpp  makefile  parser.cpp  parser.hpp  pascal  pascal.l  pascal.xmind  pascal.y  readme.txt  scanner.cpp  tmp.txt  y.tab.c  y.tab.h
Code/: CMakeLists.txt  grammar.txt
Code/src/: CMakeLists.txt  analyze.cpp  analyze.h  main.cpp  parser.cpp  parser.hpp  pascal.l  pascal.y  scanner.cpp  symTab.cpp  symTab.h
Code/src/ast/: ast.cpp  ast.h
Code/test/: arrayRecordTest.pas  arraytest.pas  comment.pas  exprTest.pas  readWriteTest.pas  stmtTest.pas
ast/: ast.cpp  ast.h
exec/: readme.txt
exec/Linux/: Pascal_Compiler
exec/MacOS/: Pascal_Compiler  out
exec/test/: comment_error.pas  error_handling.pas  fibonacci.pas  optimizeTest.pas  sysFuncTest.pas  typeTest.pas
src/: CMakeCache.txt  CMakeLists.txt  Makefile  analyze.cpp  analyze.h  cmake_install.cmake  main.cpp  makefile  parser.cpp  parser.hpp  pascal  pascal.l  pascal.y  scanner.cpp  symTab.cpp  symTab.h
src/ast/: ast.cpp  ast.h
src/src/: Makefile  Pascal_Compiler  cmake_install.cmake  out
test/: arrayRecordTest.pas  arraytest.pas  comment.ll  constTest.pascal  demo1.pascal  demo2.pascal  exprTest.ll  exprTest.pas  procTest.pas  stmtTest.pas  stmtTest.pascal  stmtTset.ll  sysFuncTest.pas  test  typeTest.pascal
